--- a/views/ESN Directory.html
+++ b/views/ESN Directory.html
@@ -271,6 +271,16 @@
           },
         })
 
+        socket.on('speed test logout', function (user) {
+    
+          if(user.username !== localStorage.getItem('username')){
+            
+            logout()
+          }
+          
+        })
+
+
         socket.on('userStatusChanged', function (update) {
           const userIndex = users.findIndex((user) => user.username === update.username)
           if (userIndex !== -1) {
@@ -297,6 +307,7 @@
 
           const body = {
             isSpeedTestMode: isSpeedTestMode,
+            username: localStorage.getItem('username'),
           };
 
           fetch(`speedTest`, {
@@ -313,40 +324,8 @@
         })
 
         document.getElementById('exit-chat').addEventListener('click', function () {
-          const userId = localStorage.getItem('userID') // Implement this function based on your app's logic
-
-          // Data to be sent in the request
-          const data = {
-            id: userId,
-            status: false,
-          }
-
-          // Send a POST request to the server
-          fetch('/logout', {
-            method: 'POST', // or 'PUT' if updating the status
-            headers: {
-              'Content-Type': 'application/json',
-              // Add any other headers your server requires, such as authentication tokens
-            },
-            body: JSON.stringify(data), // Convert the JavaScript object to a JSON string
-          })
-            .then((response) => response.json()) // Parse the JSON response
-            .then((data) => {
-              console.log('Success:', data)
-              // Here you can also trigger any additional logout logic, like redirecting the user
-            })
-            .catch((error) => {
-              console.error('Error:', error)
-            })
-            .finally(() => {
-              //socket.emit("exituser");
-              // Remove the token from localStorage
-              localStorage.removeItem('token')
-
-              // Optionally, redirect the user to the login page or home page
-              window.location.href = '/'
-            })
-          window.location.href = '/'
+          logout();
+          
         })
 
         document.getElementById('enter-chat').addEventListener('click', function () {
@@ -616,6 +595,44 @@
           statusModal.style.display = 'none'
         }
       })
+
+      function logout(){
+            const userId = localStorage.getItem('userID') // Implement this function based on your app's logic
+
+          // Data to be sent in the request
+          const data = {
+            id: userId,
+            status: false,
+          }
+
+          // Send a POST request to the server
+          fetch('/logout', {
+            method: 'POST', // or 'PUT' if updating the status
+            headers: {
+              'Content-Type': 'application/json',
+              // Add any other headers your server requires, such as authentication tokens
+            },
+            body: JSON.stringify(data), // Convert the JavaScript object to a JSON string
+          })
+            .then((response) => response.json()) // Parse the JSON response
+            .then((data) => {
+              console.log('Success:', data)
+              // Here you can also trigger any additional logout logic, like redirecting the user
+            })
+            .catch((error) => {
+              console.error('Error:', error)
+            })
+            .finally(() => {
+              //socket.emit("exituser");
+              // Remove the token from localStorage
+              localStorage.removeItem('token')
+
+              // Optionally, redirect the user to the login page or home page
+              window.location.href = '/'
+            })
+          window.location.href = '/'
+
+          }
 
       function updateUserStatus(status) {
         const username = localStorage.getItem('username')
