--- a/views/SpeedTest.html
+++ b/views/SpeedTest.html
@@ -43,8 +43,8 @@
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-        const abortController = new AbortController();
-const { signal } = abortController;
+      const abortController = new AbortController()
+      const { signal } = abortController
       const socket = io('http://localhost:3000/', {
         query: {
           token: localStorage.getItem('token'),
@@ -55,22 +55,21 @@ const { signal } = abortController;
         const duration = parseInt(document.getElementById('duration').value, 10)
         const interval = parseInt(document.getElementById('interval').value, 10)
 
-        if (interval > 5000) {
-        alert('Interval must be 5 seconds or less.');
-        return; // Stop the execution if the condition is not met
-    }
+        if (duration > 5) {
+          alert('Interval must be 5 seconds or less.')
+          return // Stop the execution if the condition is not met
+        }
 
-        
         let isSpeedTestMode = true
 
         const body = {
           isSpeedTestMode: isSpeedTestMode,
           username: localStorage.getItem('username'),
         }
-        let postInterval = null;
-        let getInterval = null;
-        let postCount = 0; // Initialize post count
-    const maxPostCount = 1000; // Set the maximum number of posts
+        let postInterval = null
+        let getInterval = null
+        let postCount = 0 // Initialize post count
+        const maxPostCount = 1000 // Set the maximum number of posts
         fetch(`speedTest`, {
           method: 'POST',
           headers: {
@@ -83,7 +82,6 @@ const { signal } = abortController;
             // This code runs only after the first fetch and all its related async operations are complete
             console.log('First fetch success:', data)
 
-            
             parseInt(document.getElementById('duration').value, '')
             parseInt(document.getElementById('interval').value, '')
             const startTime = Date.now()
@@ -91,18 +89,17 @@ const { signal } = abortController;
             const receiverName = 'public' // Use 'public' to denote public messages
 
             let endTime = startTime + duration * 1000
-            let postCount = 0
+            // let postCount = 0
             let getCount = 0
 
             // Updated function to send POST requests
             function sendPostRequest() {
-                if (postCount >= maxPostCount) {
-
-            alert('Maximum post count reached. Stopping the test.');
-            stopTest();
-            document.getElementById('exitTest').click();
-            return; // Exit the function
-        }
+              if (postCount >= maxPostCount) {
+                alert('Maximum post count reached. Stopping the test.')
+                stopTest()
+                document.getElementById('exitTest').click()
+                return // Exit the function
+              }
               const messageData = {
                 username: senderName,
                 content: 'Testmessage111111111',
@@ -139,7 +136,6 @@ const { signal } = abortController;
                 .catch((error) => console.error('Error:', error))
             }
 
-            
             postInterval = setInterval(() => {
               if (Date.now() >= endTime) {
                 clearInterval(postInterval)
@@ -166,7 +162,7 @@ const { signal } = abortController;
         function stopTest() {
           if (postInterval) clearInterval(postInterval)
           if (getInterval) clearInterval(getInterval)
-          abortController.abort();
+          abortController.abort()
         }
         document.getElementById('stopTest').addEventListener('click', stopTest)
       })
@@ -190,7 +186,7 @@ const { signal } = abortController;
           // Delay the redirection to give time for the socket to disconnect
           setTimeout(() => {
             window.location.href = 'ESN Directory.html'
-          }, 500) // Adjust the delay as needed
+          }, 500)
         } catch (error) {
           console.error('Error:', error)
         }
